--- a/config/config.ini
+++ b/config/config.ini
@@ -5,9 +5,9 @@ AUTOLOAD=app/controllers/|app/models/
 DEBUG=3
 
 db_dns=mysql:host=localhost;port=3306;dbname=
-db_name=your_database_name
-db_user=your_mysql_user
-db_pass=your_mysql_password
+db_name=upcf3
+db_user=root
+db_pass=root
 
 UI=app/views/
 
