--- a/config/routes.ini
+++ b/config/routes.ini
@@ -1,6 +1,10 @@
 [routes]
 
 GET /=UserController->index
+GET /login=UserController->render
+POST /authenticate=UserController->authenticate
+
+GET /users=UserController->index
 GET /success/@message=UserController->index
 GET|POST /user/create=UserController->create
 GET /user/update/@id=UserController->update
