--- a/config/routes.ini
+++ b/config/routes.ini
@@ -3,6 +3,7 @@
 GET /=UserController->index
 GET /login=UserController->render
 POST /authenticate=UserController->authenticate
+GET /logout=UserController->logout
 
 GET /users=UserController->index
 GET /success/@message=UserController->index
