update user management

--- a/config/config.ini
+++ b/config/config.ini
@@ -10,6 +10,9 @@ db_name=upcf3
 db_user=root
 db_pass=root
 
+roles=super, editor, regular
+statuses=blocked, active
+
 UI=app/views/
 
 site="F3 CRUD"
