--- a/config/routes.ini
+++ b/config/routes.ini
@@ -11,3 +11,10 @@ GET|POST /user/create=UserController->create
 GET /user/update/@id=UserController->update
 POST /user/update=UserController->update
 GET /user/delete/@id=UserController->delete
+
+GET /brands=BrandController->index
+GET /brand/success/@message=BrandController->index
+GET|POST /brand/create=BrandController->create
+GET /brand/update/@id=BrandController->update
+POST /brand/update=BrandController->update
+GET /brand/delete/@id=BrandController->delete
