update lib and bootstrap-table

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -13,6 +13,7 @@ POST /user/update=UserController->update
 GET /user/delete/@id=UserController->delete
 
 GET /brands=BrandController->index
+POST /brands/search=BrandController->search
 GET /brand/success/@message=BrandController->index
 GET|POST /brand/create=BrandController->create
 GET /brand/update/@id=BrandController->update
