--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 [globals]
 
 AUTOLOAD=app/controllers/|app/models/
-CACHE=true
+CACHE=false
 
 DEBUG=3
 
@@ -10,7 +10,7 @@ db_name=upcf3
 db_user=root
 db_pass=root
 
-roles=super, editor, regular
+roles=super, editor, reader
 statuses=blocked, active
 
 UI=app/views/
