--- a/config/routes.ini
+++ b/config/routes.ini
@@ -6,10 +6,12 @@ POST /authenticate=UserController->authenticate
 GET /logout=UserController->logout
 
 GET /users=UserController->index
-GET /success/@message=UserController->index
+GET /user/success/@message=UserController->index
 GET|POST /user/create=UserController->create
 GET /user/update/@id=UserController->update
 POST /user/update=UserController->update
+GET /user/reset/@id=UserController->reset
+POST /user/reset=UserController->reset
 GET /user/delete/@id=UserController->delete
 
 GET /brands=BrandController->index
