add languages and extensions tables

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -10,6 +10,8 @@ GET /user/success/@message=UserController->index
 GET|POST /user/create=UserController->create
 GET /user/update/@id=UserController->update
 POST /user/update=UserController->update
+GET /user/password/@id=UserController->password
+POST /user/password=UserController->password
 GET /user/reset/@id=UserController->reset
 POST /user/reset=UserController->reset
 GET /user/delete/@id=UserController->delete
