add extension and language

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -17,9 +17,22 @@ POST /user/reset=UserController->reset
 GET /user/delete/@id=UserController->delete
 
 GET /brands=BrandController->index
-POST /brands/search=BrandController->search
 GET /brand/success/@message=BrandController->index
 GET|POST /brand/create=BrandController->create
 GET /brand/update/@id=BrandController->update
 POST /brand/update=BrandController->update
 GET /brand/delete/@id=BrandController->delete
+
+GET /extensions=ExtensionController->index
+GET /extension/success/@message=ExtensionController->index
+GET|POST /extension/create=ExtensionController->create
+GET /extension/update/@id=ExtensionController->update
+POST /extension/update=ExtensionController->update
+GET /extension/delete/@id=ExtensionController->delete
+
+GET /languages=LanguageController->index
+GET /languages/success/@message=LanguageController->index
+GET|POST /languages/create=LanguageController->create
+GET /languages/update/@id=LanguageController->update
+POST /languages/update=LanguageController->update
+GET /languages/delete/@id=LanguageController->delete
