--- a/config/config.ini
+++ b/config/config.ini
@@ -10,6 +10,11 @@ db_name=upcf3
 db_user=root
 db_pass=root
 
+; db_dns=mysql:host=localhost;port=3306;dbname=
+; db_name=wen108co_upcf3
+; db_user=wen108co_csctwx	
+; db_pass=focus01
+
 roles=super, editor, reader
 statuses=blocked, active
 
