--- a/config/routes.ini
+++ b/config/routes.ini
@@ -31,8 +31,8 @@ POST /extension/update=ExtensionController->update
 GET /extension/delete/@id=ExtensionController->delete
 
 GET /languages=LanguageController->index
-GET /languages/success/@message=LanguageController->index
-GET|POST /languages/create=LanguageController->create
-GET /languages/update/@id=LanguageController->update
-POST /languages/update=LanguageController->update
-GET /languages/delete/@id=LanguageController->delete
+GET /language/success/@message=LanguageController->index
+GET|POST /language/create=LanguageController->create
+GET /language/update/@id=LanguageController->update
+POST /language/update=LanguageController->update
+GET /language/delete/@id=LanguageController->delete
