--- a/config/routes.ini
+++ b/config/routes.ini
@@ -36,3 +36,10 @@ GET|POST /language/create=LanguageController->create
 GET /language/update/@id=LanguageController->update
 POST /language/update=LanguageController->update
 GET /language/delete/@id=LanguageController->delete
+
+GET /items=ItemController->index
+GET /item/success/@message=ItemController->index
+GET|POST /item/create=ItemController->create
+GET /item/update/@id=ItemController->update
+POST /item/update=ItemController->update
+GET /item/delete/@id=ItemController->delete
