--- a/config/routes.ini
+++ b/config/routes.ini
@@ -38,6 +38,7 @@ POST /language/update=LanguageController->update
 GET /language/delete/@id=LanguageController->delete
 
 GET /items=ItemController->index
+GET /items/data=ItemController->data
 GET /item/success/@message=ItemController->index
 GET|POST /item/create=ItemController->create
 GET /item/update/@id=ItemController->update
