--- a/config/routes.ini
+++ b/config/routes.ini
@@ -1,6 +1,6 @@
 [routes]
 
-GET /=UserController->index
+GET /=ItemController->index
 GET /login=UserController->render
 POST /authenticate=UserController->authenticate
 GET /logout=UserController->logout
