--- a/config/routes.ini
+++ b/config/routes.ini
@@ -44,3 +44,4 @@ GET|POST /item/create=ItemController->create
 GET /item/update/@id=ItemController->update
 POST /item/update=ItemController->update
 GET /item/delete/@id=ItemController->delete
+POST /item/delete=ItemController->delete
