update brand and extension delete, update, create

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -22,6 +22,7 @@ GET|POST /brand/create=BrandController->create
 GET /brand/update/@id=BrandController->update
 POST /brand/update=BrandController->update
 GET /brand/delete/@id=BrandController->delete
+POST /brand/delete=BrandController->delete
 
 GET /extensions=ExtensionController->index
 GET /extension/success/@message=ExtensionController->index
@@ -29,6 +30,7 @@ GET|POST /extension/create=ExtensionController->create
 GET /extension/update/@id=ExtensionController->update
 POST /extension/update=ExtensionController->update
 GET /extension/delete/@id=ExtensionController->delete
+POST /extension/delete=ExtensionController->delete
 
 GET /languages=LanguageController->index
 GET /language/success/@message=LanguageController->index
