update language, user delete

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -15,6 +15,7 @@ POST /user/password=UserController->password
 GET /user/reset/@id=UserController->reset
 POST /user/reset=UserController->reset
 GET /user/delete/@id=UserController->delete
+POST /user/delete=UserController->delete
 
 GET /brands=BrandController->index
 GET /brand/success/@message=BrandController->index
@@ -38,6 +39,7 @@ GET|POST /language/create=LanguageController->create
 GET /language/update/@id=LanguageController->update
 POST /language/update=LanguageController->update
 GET /language/delete/@id=LanguageController->delete
+POST /language/delete=LanguageController->delete
 
 GET /items=ItemController->index
 GET /items/data=ItemController->data
