update detail, copy, upccopy

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -49,3 +49,8 @@ GET /item/update/@id=ItemController->update
 POST /item/update=ItemController->update
 GET /item/delete/@id=ItemController->delete
 POST /item/delete=ItemController->delete
+GET /item/copy/@id=ItemController->copy
+POST /item/copy=ItemController->copy
+GET /item/detail/@id=ItemController->detail
+GET /item/upccopy/@id=ItemController->upccopy
+POST /item/upccopy=ItemController->upccopy
