update verify unique for language

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -35,6 +35,7 @@ POST /extension/delete=ExtensionController->delete
 
 GET /languages=LanguageController->index
 GET /language/success/@message=LanguageController->index
+GET /language/error/@message=LanguageController->error
 GET|POST /language/create=LanguageController->create
 GET /language/update/@id=LanguageController->update
 POST /language/update=LanguageController->update
