verify itme, user, extension and brand

--- a/config/routes.ini
+++ b/config/routes.ini
@@ -7,6 +7,7 @@ GET /logout=UserController->logout
 
 GET /users=UserController->index
 GET /user/success/@message=UserController->index
+GET /user/error/@message=UserController->error
 GET|POST /user/create=UserController->create
 GET /user/update/@id=UserController->update
 POST /user/update=UserController->update
@@ -19,6 +20,7 @@ POST /user/delete=UserController->delete
 
 GET /brands=BrandController->index
 GET /brand/success/@message=BrandController->index
+GET /brand/error/@message=BrandController->error
 GET|POST /brand/create=BrandController->create
 GET /brand/update/@id=BrandController->update
 POST /brand/update=BrandController->update
@@ -27,6 +29,7 @@ POST /brand/delete=BrandController->delete
 
 GET /extensions=ExtensionController->index
 GET /extension/success/@message=ExtensionController->index
+GET /extension/error/@message=ExtensionController->error
 GET|POST /extension/create=ExtensionController->create
 GET /extension/update/@id=ExtensionController->update
 POST /extension/update=ExtensionController->update
@@ -45,6 +48,7 @@ POST /language/delete=LanguageController->delete
 GET /items=ItemController->index
 GET /items/data=ItemController->data
 GET /item/success/@message=ItemController->index
+GET /item/error/@message=ItemController->error
 GET|POST /item/create=ItemController->create
 GET /item/update/@id=ItemController->update
 POST /item/update=ItemController->update
