--- a/config/routes.ini
+++ b/config/routes.ini
@@ -59,3 +59,5 @@ POST /item/copy=ItemController->copy
 GET /item/detail/@id=ItemController->detail
 GET /item/upccopy/@id=ItemController->upccopy
 POST /item/upccopy=ItemController->upccopy
+GET /item/iucopy/@id=ItemController->iucopy
+POST /item/iucopy=ItemController->iucopy
