item copy manuely

--- a/config/config.ini
+++ b/config/config.ini
@@ -15,7 +15,7 @@ db_pass=root
 ; db_user=wen108co_csctwx	
 ; db_pass=focus01
 
-roles=super, editor, reader
+roles=admin, editor, reader, power
 statuses=blocked, active
 
 UI=app/views/
