--- a/config/config.ini
+++ b/config/config.ini
@@ -5,15 +5,15 @@ CACHE=false
 
 DEBUG=3
 
-; db_dns=mysql:host=localhost;port=3306;dbname=
-; db_name=upcf3
-; db_user=root
-; db_pass=root
-
 db_dns=mysql:host=localhost;port=3306;dbname=
-db_name=wen108co_upcf3
-db_user=wen108co_csctwx	
-db_pass=focus01
+db_name=upcf3
+db_user=root
+db_pass=root
+
+; db_dns=mysql:host=localhost;port=3306;dbname=
+; db_name=wen108co_upcf3
+; db_user=wen108co_csctwx	
+; db_pass=focus01
 
 roles=admin, editor, reader, power
 statuses=blocked, active
